--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 node_modules
 /dist
 /firebase
-../firebase/firebaseInit
 
 
 # local env files
@@ -23,3 +22,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+src/firebase/firebaseInit.js
