--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.2",
     "core-js": "^3.8.3",
     "firebase": "^9.14.0",
     "vue": "^3.2.13",
